# fact_helper_file

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: run_tests.yml
fact_helper_file/: __init__.py  type.py
fact_helper_file/mime/: custom_magic_kernel  custom_mime_archives  custom_mime_compressed_streams  custom_mime_encoding  custom_mime_file_systems  custom_mime_firmware_containers  custom_mime_linux
test/unit/: test_type.py
