[build-system]
requires = [
  "setuptools >= 61.0.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "fact_helper_file"
version = "0.2.15"
authors = [
    {name = "Johannes vom Dorp"}
]
license = {file = "LICENSE"}
urls = {homepage = "https://github.com/fkie-cad/fact_helper_file"}
dependencies = [
    "python-magic",
]
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["."]
include = ["fact_helper_file"]
exclude = ["test"]

[tool.setuptools.package-data]
mypkg = ["*.mgc"]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py37"]

[tool.pylint.main]
init-hook = 'import sys; sys.path.append("./src")'
load-plugins = ["pylint.extensions.bad_builtin", "pylint.extensions.mccabe"]
jobs = 0
include-naming-hint = true
good-names = ["i", "j", "k", "Run", "_", "db", "ex", "fd", "fo", "fp", "fw", "pw", "rv", "sc", "tc"]

[tool.pylint."messages control"]
confidence = []
disable = ["missing-docstring" , "locally-disabled", "logging-format-interpolation", "logging-fstring-interpolation"]


[tool.pylint.reports]
output-format = "colorized"
msg-template="{path}:{line}: [{symbol}:{obj}] {msg}"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args=7
max-complexity = 7
min-public-methods = 0
max-public-methods = 40

[tool.isort]
line_length=120
default_section = "THIRDPARTY"
profile = "black"
