[build-system]
requires = [
  "setuptools >= 61.0.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "fact_helper_file"
version = "0.2.16"
authors = [
    {name = "Johannes vom Dorp"}
]
license = {file = "LICENSE"}
urls = {homepage = "https://github.com/fkie-cad/fact_helper_file"}
dependencies = [
    "python-magic~=0.4.27",
    "rich~=13.7.1",
]
requires-python = ">=3.8"

[project.scripts]
fact-file = "fact_helper_file.fact_file:main"

[project.optional-dependencies]
dev = [
    "pre-commit~=3.8.0",
    "ruff~=0.5.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fact_helper_file"]
exclude = ["test"]

[tool.setuptools.package-data]
mypkg = ["*.mgc"]

[tool.ruff]
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "data",
]
line-length = 99
target-version = "py38"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "EXE",
    "FA",
    "ISC",
    "PIE",
    "T20",
    "PT",
    "Q",
    "RET",
    "SIM",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "PL",
    "PLR",
    "PLW",
    "PERF",
    "RUF",
]
ignore = [
    "A003",
    "PERF203",
    "PERF401",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF015",
    "T201",
    # pydantic only supports these from python>=3.9
    "UP006",
    "UP007",
    # rules may cause conflicts when used with the formatter
    "ISC001",
    "Q001",
]
fixable = [
    "F",
    "E",
    "W",
    "C90",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "EXE",
    "FA",
    "ISC",
    "PIE",
    "T20",
    "PT",
    "Q",
    "RET",
    "SIM",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "PL",
    "PLR",
    "PLW",
    "PERF",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
# don't check for "magic value" in tests
"tests/*" = ["PLR2004"]
