[build-system]
requires = [
  "setuptools >= 61.0.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "data",
]
line-length = 99
target-version = "py38"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "EXE",
    "FA",
    "ISC",
    "PIE",
    "T20",
    "PT",
    "Q",
    "RET",
    "SIM",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "PL",
    "PLR",
    "PLW",
    "PERF",
    "RUF",
]
ignore = [
    "A003",
    "PERF203",
    "PERF401",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF015",
    "T201",
    # pydantic only supports these from python>=3.9
    "UP006",
    "UP007",
    # rules may cause conflicts when used with the formatter
    "ISC001",
    "Q001",
]
fixable = [
    "F",
    "E",
    "W",
    "C90",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "EXE",
    "FA",
    "ISC",
    "PIE",
    "T20",
    "PT",
    "Q",
    "RET",
    "SIM",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "PL",
    "PLR",
    "PLW",
    "PERF",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
# don't check for "magic value" in tests
"tests/*" = ["PLR2004"]
