[metadata]
name = fact_helper_file
version = 0.2.17
author = Johannes vom Dorp
license_file = LICENSE
url = https://github.com/fkie-cad/fact_helper_file

[options]
python_requires = >=3.8
install_requires =
    python-magic~=0.4.27
    rich~=13.7.1
packages = find:

[options.packages.find]
where = .
include =
    fact_helper_file
exclude =
    test

[options.extras_require]
dev =
    pre-commit~=3.8.0
    ruff~=0.5.6

[options.package_data]
* = bin/custommime.mgc
